# TCSP_MCG_Reproducibility_Package

./: .gitignore  CITATION.cff  LICENSE  README.md  launch_step_by_step_ui.bat  launch_ui.bat  launch_ui.sh  pyproject.toml  requirements.txt  run_all.bat  run_all.sh
docs/: formulas_table14.md  generator_set.md  normal_form_and_reduction.md  reviewer_reproducibility_note.md  reviewer_response_artifact.md  serialization_model.md  test_vector_specification.md
notebooks/: README.md
outputs/reports/: reproducibility_report.md  reviewer_response_artifact.md  run_log.txt
outputs/tables/: formula_breakdown.csv  formula_breakdown.xlsx  table14_corrected.csv  table14_corrected.json  table14_corrected.md  table14_corrected.xlsx
outputs/test_vectors/: profile_A_test_vector.json  profile_B_test_vector.json  profile_C_test_vector.json  test_vector_summary.csv  test_vector_summary.json  test_vector_summary.md  test_vector_summary.xlsx
src/: __init__.py  cli.py  crypto_workflow.py  output_generation.py  parameters.py  word_engine.py
tests/: test_formulas.py  test_keygen_encrypt_decrypt.py  test_outputs_exist.py  test_serialization.py  test_table14.py  test_ui_smoke.py  test_word_engine.py
ui/: app.py
worksheets/: README.md
