[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tcsp-mcg-reproducibility-package"
version = "1.0.0"
description = "Reproducibility artifact for TCSP-MCG Table 14 and deterministic symbolic test vectors."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "TCSP-MCG Reproducibility Artifact Authors"}]
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "matplotlib>=3.8",
  "pydantic>=2.7",
  "rich>=13.7",
  "typer>=0.12",
  "streamlit>=1.36",
  "openpyxl>=3.1",
  "python-docx>=1.1",
  "tabulate>=0.9"
]

[project.optional-dependencies]
test = ["pytest>=8.2"]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
